# insta-gpt

./: .env.template  .gitignore  LICENSE  README.md  config.yaml  main.py  notes.md  pyproject.toml  requirements.txt  topics.csv
insta_gpt/: __init__.py  generator.py  utils.py
insta_gpt/prompt_design/: caption_template.txt
scripts/: cronjob.txt  schedule.sh
social_media_manager/: generator.py  utils.py
social_media_manager/prompt_design/: scene_template.txt
